# embind-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
src/: main.cpp  resize_by_opencv.cpp  resize_by_opencv.hpp
